# Tools

./: LICENSE  README.md
DuplicatesSniffer/: .gitignore  CMakeLists.txt
DuplicatesSniffer/DuplicateSniffer/: CMakeLists.txt  DuplicateSniffer.cpp  DuplicateSniffer.h  OldMakeLists.txt  Test.h  duplicate_index_builder.cpp  flat_index_builder.cpp
DuplicatesSniffer/DuplicateSniffer/include/common/: common.h
DuplicatesSniffer/DuplicateSniffer/include/engine/: duplicate_index_builder.h  file_info.h  flat_index_builder.h  identical_file_group.h
DuplicatesSniffer/FileSniffer/: CMakeLists.txt  FileSniffer.cpp  FileSniffer.h  duplicate_index_builder.cpp  flat_index_builder.cpp
DuplicatesSniffer/FileSniffer/include/common/: common.h
DuplicatesSniffer/FileSniffer/include/engine/: duplicate_index_builder.h  file_info.h  flat_index_builder.h
DuplicatesSniffer/duplicate_sniffer/: CMakeLists.txt  duplicate_sniffer.cpp  duplicate_sniffer.h
EasySync/: EasySync.sln
EasySync/EasySync/: CmdProgram.cpp  CmdProgram.h  Common.h  EasySync.cpp  EasySync.vcxproj  EasySync.vcxproj.filters  TestOne.h  TestTwo.h  TimerUtil.cpp  TimerUtil.h
EasySync/SyncServ/: ComparisonUtils.h  CrcCalculator.cpp  CrcCalculator.h  CrcListGenerator.cpp  CrcListGenerator.h  DuplicateFileList.h  DuplicateFinder.cpp  DuplicateFinder.h  FileInfo.h  FileSystemHelper.cpp  FileSystemHelper.h  LocalTypes.h  SearchFilterCriteria.h  SearchFilterInfo.h  SyncServ.cpp  SyncServ.vcxproj  SyncServ.vcxproj.filters
JFxPasswordManagerTryout/: .gitignore
